# Trakka

./: .gitignore  README.md  WEEKLY_TIMESHEET_IMPLEMENTATION.md  conftest.py  main.py  manage.py  pyproject.toml  pytest.ini  test_weekly_workflow.py
adminpanel/: urls.py  views.py
adminpanel/templates/adminpanel/: base.html  dashboard.html  project_list.html  project_members.html  reports.html  settings.html  user_create.html  user_delete.html  user_detail.html  user_edit.html  user_list.html
templates/: base.html  dashboard.html
templates/admin/: base_site.html
templates/approvals/: approval_list.html  approve_entry.html  approve_weekly_timesheet.html  reject_entry.html  reject_weekly_timesheet.html  weekly_approval_list.html
templates/auth/: login.html
templates/projects/: project_create.html  project_delete.html  project_detail.html  project_list.html
templates/reports/: report_detail.html  report_summary.html
templates/timesheets/: submit_week.html  timer_start.html  timer_stop.html  timesheet_create.html  timesheet_delete.html  timesheet_detail.html  timesheet_list.html  weekly_timesheet_detail.html
timesheet/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
timesheet/management/commands/: create_test_users.py
timesheet/migrations/: 0001_initial.py  0002_project_members.py  0003_weeklytimesheet_timeentry_weekly_timesheet.py  0004_populate_weekly_timesheets.py
timesheet/templatetags/: timesheet_extras.py
trakka_project/: asgi.py  settings.py  urls.py  wsgi.py
