[project]
name = "trakka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.1",
    "django-extensions>=4.1",
    "django-widget-tweaks>=1.5.1",
    "python-decouple>=3.8",
    "dj-database-url>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]
